--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -8,7 +8,7 @@
 
   <main class="featured-content">
     <div class="card-grid">
-      <div class="card" routerLink="/bear">
+      <div class="card" routerLink="/events/bear">
         <div class="card-content">
           <h2 class="card-title">Upcoming Event</h2>
           <p class="card-description">Prepare for the Bear event! See the best strategies and rewards.</p>
@@ -18,7 +18,7 @@
         </div>
       </div>
 
-      <div class="card" routerLink="/hero-gear">
+      <div class="card" routerLink="/tools/hero-gear">
         <div class="card-content">
           <h2 class="card-title">Gear Optimizer</h2>
           <p class="card-description">Optimize your hero's gear setup for maximum performance.</p>
